@@ -709,7 +709,7 @@ MAC_SAME_NAME_ARG(SetApertureSize, 2, 0, SETAPERTURESIZE, II)
 MAC_SAME_NAME_ARG(SkipZMoveNextNavRealign, 0, 4, SKIPZMOVENEXTNAVREALIGN, i)
 MAC_SAME_NAME_ARG(SetRedoMontageXCorrs, 1, 4, SETREDOMONTAGEXCORRS, I)
 MAC_SAME_NAME_ARG(SetGridMapLimits, 5, 4, SETGRIDMAPLIMITS, IDDDD)
-MAC_SAME_NAME_ARG(ParamSetToUseForMontage, 1, 4, PARAMSETTOUSEFORMONTAGE, I)
+MAC_SAME_NAME_ARG(ParamSetToUseForMontage, 1, 4, PARAMSETTOUSEFORMONTAGE, Ii)
 MAC_SAME_NAME_ARG(SetStatusLine, 2, 4, SETSTATUSLINE, IS)
 MAC_SAME_NAME_ARG(ClearStatusLine, 1, 4, CLEARSTATUSLINE, I)
 MAC_SAME_FUNC_ARG(HighlightStatusLine, 2, 4, ClearStatusLine, HIGHLIGHTSTATUSLINE, II)
