@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+4/26/24: Added argument to ParamSetToUseForMontage to apply it to next montage
+opened through script.
+
 4/22/24: SEM_4-2-0beta6
 4/22/24: SEM_4-1-10
 4/20/24: Changed how SEM-AutoIT selects an aperture size on Windows 10 so it
